chore: added todo router test
